# CINEMA-OT

./: Readme.md  cinemaot_tutorial.ipynb  setup.cfg  simulation.py  utils.py
benchmark/: Benchmark_tutorial.ipynb  Benchmark_tutorial2.ipynb  Benchmark_tutorial3.ipynb  Benchmark_tutorial4.ipynb  Sciplex_benchmark.ipynb
cinemaot/: __init__.py  benchmark.py  cinemaot.py  sinkhorn_knopp.py  utils.py
