[metadata]
name = cinemaot
version = 0.0.1
author = Rahul Dhodapkar
author_email = rahul.dhodapkar@yale.edu
description = Causal INdependent Effect Module Attribution + Optimal Transport
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vandijklab/CINEMA-OT
project_urls =
    Bug Tracker = https://github.com/vandijklab/CINEMA-OT/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent

[options]
package_dir =
    = cinemaot
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scanpy
    sklearn
    scipy
    meld
    rpy2
    gseapy

[options.packages.find]
where = cinemaot