[metadata]
name = cinemaot
version = 0.0.3
author = Mingze Dong
author_email = mingze.dong@yale.edu
description = Causal INdependent Effect Module Attribution + Optimal Transport
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vandijklab/CINEMA-OT
project_urls =
    Bug Tracker = https://github.com/vandijklab/CINEMA-OT/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    scanpy
    sklearn
    scipy
    statsmodels
    anndata

[options.packages.find]
where = 

